Changed: bh_check_languages.php can now help to find strings which haven't been translated. Fixed: admin_forum_links.php reset button weren't being translated. Fixed: admin_make_style.php "this colour" and "new" weren't being translated. Added: Favourites checkbox and button to Guest MyForums with an error about needing to login. Added: img { vertical-align: middle } to all CSS files. Updated: Added missing strings as detailed above to language files and some changes to fr-ca from Jo.

--- a/forum/forums/default/style.css
+++ b/forum/forums/default/style.css
@@ -8,6 +8,10 @@ BODY		{
                 font-size: 10pt;
 		}
 
+img             {
+                vertical-align: text-top;
+                }
+
 frameset        {
                 border-style: none;
 		border-width: 0px;
