--- a/forum/styles/style.css
+++ b/forum/styles/style.css
@@ -8,6 +8,10 @@ body {
     font-size: 10pt;
 }
 
+img {
+    vertical-align: text-top;
+}
+
 frameset {
     border-style: none;
     margin: 0;
